styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .btn-round {
    @apply hover:transition-colors hover:bg-white/20 p-2 rounded-full focus:outline-none focus:ring-2 focus:border-primary-500 focus:ring-inset duration-300 focus:ring-primary-500;
  }
  hr {
    @apply h-px dark:border-gray-950 border-gray-200 py-2;
  }
  .tag {
    @apply border font-body text-tag lg:hover:bg-primary-500 lg:hover:text-white lg:hover:transition-colors focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-inset duration-300;
  }
  .tag-selected {
    @apply bg-primary-500 dark:bg-primary-500 text-white dark:text-white !important;
  }
  .btn-primary {
    @apply text-button text-white bg-primary-500 hover:transition-colors hover:bg-primary-400 rounded-full focus:outline-none focus:ring-2 focus:ring-inset duration-300 focus:border-white focus:ring-white;
  }
  .btn-white {
    @apply border text-button dark:hover:text-black hover:transition-colors dark:hover:bg-white hover:bg-gray-200 rounded-full focus:outline-none focus:ring-2 focus:ring-inset duration-300 focus:border-primary-500 focus:ring-primary-500;
  }
  .btn-gray {
    @apply text-button hover:bg-gray-200 dark:hover:bg-gray-600 border border-gray-200 dark:border-gray-950 dark:bg-gray-950 hover:transition-colors rounded-full focus:outline-none focus:ring-2 focus:ring-inset duration-300 focus:border-primary-500 focus:ring-primary-500;
  }
}


@layer utilities {
  .custom-hover {
    @apply hover:text-primary-500 hover:transition-colors focus:outline-none focus:border-primary-500 focus:ring-2 focus:ring-primary-500 focus:ring-inset duration-300 rounded-3xl px-3 py-2;
  }
  .link-hover {
    @apply hover:text-primary-500 hover:transition-colors focus:outline-none focus:border-primary-500 focus:ring-2 focus:ring-primary-500 focus:ring-inset duration-300 rounded-3xl;
  }
}

